--- a/server-side/package.json
+++ b/server-side/package.json
@@ -8,6 +8,9 @@
         "node": "16.13.2",
         "npm": "8.1.2"
     },
+    "scripts": {
+        "start": "node index.js"
+      },
     "author": "ismael-back",
     "license": "ISC",
     "dependencies": {
