--- a/server-side/package.json
+++ b/server-side/package.json
@@ -2,7 +2,7 @@
     "name": "server-side",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "index",
     "engines": {
       "node": "16.13.2",
       "npm": "8.1.2"
